Body Background Color Added

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,26 @@
   font-family: "Poppins", sans-serif;
 
 }
+
+
+body {
+  background-color: #f0f0f0;
+  overflow: hidden;
+}
+
+.container {
+  width: 100%;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #4e085f, #153677);
+  padding: 10px;
+}
+
+.todo-app {
+  width: 100%;
+  max-width: 540px;
+  background: #fff;
+  margin: 100px auto 20px;
+  padding: 40px 30px 20px;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
